--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ psycopg2-binary = "^2.9.9"
 pyyaml = "^6.0.1"
 addict = "^2.4.0"
 schema = "^0.7.5"
+aiohttp = "^3.9.5"
 
 
 [tool.poetry.group.dev.dependencies]
